Remove .gitignore and fix bug
Edit player button was a bit too low.

--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ body > h1 {
     }
 
     .edit-player-btn {
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       font-size: 1rem;
     }
   }
